Relinked Buttons, Added more Nav links

--- a/index.html
+++ b/index.html
@@ -91,9 +91,28 @@
                 <span class="f-1 thin text-primary"> Michael </span><br />
                 <strong class="f-1"> Gombos! </strong>
               </h1>
-              <h2 class="text-light display-6 hero-subheader">
-                Houston Based Web Designer
-              </h2>
+              <div class="hero-subheader">
+                <h2 class="text-light display-6">Houston Based Web Designer</h2>
+                <div class="icon-nav">
+                  <a href="https://github.com/MichaelGombos" target="_blank">
+                    <img
+                      class="nav-icon me-3"
+                      src="assets\svg\icons\Icon awesome-github.svg"
+                    />
+                  </a>
+                  <a
+                    href="https://github.com/MichaelGombos"
+                    target="_blank"
+                    class=""
+                  >
+                    <img
+                      href="https://www.linkedin.com/in/michael-gombos-b811721b4/"
+                      class="nav-icon text-decoration-none"
+                      src="assets\svg\icons\Icon awesome-linkedin-in.svg"
+                    />
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -139,7 +158,7 @@
     </section>
     <!-- Design Projects -->
     <a id="design-projects" class="anchor"></a>
-    <section class="my-5 container-fluid">
+    <section class="my-10 container-fluid">
       <div class="row">
         <div
           class="
@@ -182,13 +201,15 @@
                 This was one of my first real projects and taught me a lot about
                 extracting content from clients.
               </p>
-              <button class="btn btn-outline-primary fw-lighter text-light">
-                View Live Site
-                <img
-                  class="d-inline"
-                  src="assets\svg\icons\Icon feather-external-link.svg"
-                />
-              </button>
+              <a href="https://www.kbkaty.com/" target="_blank">
+                <button class="btn btn-outline-primary fw-lighter text-light">
+                  View Live Site
+                  <img
+                    class="d-inline"
+                    src="assets\svg\icons\Icon feather-external-link.svg"
+                  />
+                </button>
+              </a>
             </div>
             <figure
               class="
@@ -212,7 +233,7 @@
     </section>
     <!-- Development Projects -->
     <a id="development-projects" class="anchor"></a>
-    <section class="my-5 container-fluid">
+    <section class="my-10 container-fluid">
       <div class="row">
         <div class="bg-secondary col-10 offset-1 pb-5 radius-50-l">
           <!--content-->
@@ -237,32 +258,32 @@
                 I made an extension to give myself more breathing room while in
                 the CSS tab, that can be found on the google app store!
               </p>
-              <button class="btn btn-outline-primary fw-lighter text-light">
-                <a
-                  href="https://github.com/MichaelGombos"
-                  class="text-decoration-none text-white"
-                  target="_blank"
-                >
+              <a
+                href="https://github.com/MichaelGombos/Carrot-CSS-Tab-Extender"
+                class="text-decoration-none text-white"
+                target="_blank"
+              >
+                <button class="btn btn-outline-primary fw-lighter text-light">
                   View Github
                   <img
                     class="d-inline"
                     src="assets\svg\icons\Icon feather-external-link.svg"
                   />
-                </a>
-              </button>
-              <button class="btn btn-outline-primary fw-lighter text-light">
-                <a
-                  href="https://chrome.google.com/webstore/detail/carrot-css-tab-extender/lgkdfebkigaodhjhbceehdilafpdallo?hl=en"
-                  class="text-decoration-none text-white"
-                  target="_blank"
-                >
+                </button>
+              </a>
+              <a
+                href="https://chrome.google.com/webstore/detail/carrot-css-tab-extender/lgkdfebkigaodhjhbceehdilafpdallo?hl=en"
+                class="text-decoration-none text-white"
+                target="_blank"
+              >
+                <button class="btn btn-outline-primary fw-lighter text-light">
                   View Extension Page
                   <img
                     class="d-inline"
                     src="assets\svg\icons\Icon feather-external-link.svg"
                   />
-                </a>
-              </button>
+                </button>
+              </a>
             </div>
             <figure
               class="
@@ -307,32 +328,33 @@
                 in the snov.io database and it will return all data as JSON
                 objects. Learn more on my GitHub.
               </p>
-              <button class="btn btn-outline-primary fw-lighter text-light">
-                <a
-                  href="https://github.com/MichaelGombos"
-                  class="text-decoration-none text-white"
-                  target="_blank"
-                >
+              <a
+                href="https://github.com/MichaelGombos/Snov-Email-Buddy"
+                class="text-decoration-none text-white"
+                target="_blank"
+              >
+                <button class="btn btn-outline-primary fw-lighter text-light">
                   View Github
                   <img
                     class="d-inline"
                     src="assets\svg\icons\Icon feather-external-link.svg"
                   />
-                </a>
-              </button>
-              <button class="btn btn-outline-primary fw-lighter text-light">
-                <a
-                  href="https://chrome.google.com/webstore/detail/carrot-css-tab-extender/lgkdfebkigaodhjhbceehdilafpdallo?hl=en"
-                  class="text-decoration-none text-white"
-                  target="_blank"
-                >
+                </button>
+              </a>
+
+              <a
+                href="https://www.youtube.com/watch?v=tZADWMozBn0"
+                class="text-decoration-none text-white"
+                target="_blank"
+              >
+                <button class="btn btn-outline-primary fw-lighter text-light">
                   Watch Video
                   <img
                     class="d-inline"
-                    src="assets\svg\icons\Icon feather-external-link.svg"
+                    src="assets\svg\icons\Icon feather-youtube.svg"
                   />
-                </a>
-              </button>
+                </button>
+              </a>
             </div>
 
             <iframe
@@ -377,7 +399,7 @@
     </section>
     <!-- Skills-->
     <a id="skills" class="anchor"></a>
-    <section class="container-fluid my-5">
+    <section class="container-fluid my-10">
       <div class="row">
         <div
           class="
@@ -446,7 +468,7 @@
     </section>
     <!-- Experience-->
     <a id="experience" class="anchor"></a>
-    <section class="my-5 container-fluid">
+    <section class="my-10 container-fluid">
       <div class="row">
         <div class="bg-secondary col-10 offset-1 pb-5 radius-50-l">
           <!--content-->
