removed line inside of linkedin icon

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <a
                     href="https://github.com/MichaelGombos"
                     target="_blank"
-                    class=""
+                    class="text-decoration-none"
                   >
                     <img
                       href="https://www.linkedin.com/in/michael-gombos-b811721b4/"
