swapped href tag from img to a tag on linkedin nav link

--- a/index.html
+++ b/index.html
@@ -94,19 +94,22 @@
               <div class="hero-subheader">
                 <h2 class="text-light display-6">Houston Based Web Designer</h2>
                 <div class="icon-nav">
-                  <a href="https://github.com/MichaelGombos" target="_blank">
-                    <img
-                      class="nav-icon me-3"
-                      src="assets\svg\icons\Icon awesome-github.svg"
-                    />
-                  </a>
                   <a
                     href="https://github.com/MichaelGombos"
                     target="_blank"
                     class="text-decoration-none"
                   >
                     <img
-                      href="https://www.linkedin.com/in/michael-gombos-b811721b4/"
+                      class="nav-icon me-3"
+                      src="assets\svg\icons\Icon awesome-github.svg"
+                    />
+                  </a>
+                  <a
+                    href="https://www.linkedin.com/in/michael-gombos-b811721b4/"
+                    target="_blank"
+                    class="text-decoration-none"
+                  >
+                    <img
                       class="nav-icon text-decoration-none"
                       src="assets\svg\icons\Icon awesome-linkedin-in.svg"
                     />
