updated footer layout, added rest of the projects content

--- a/index.html
+++ b/index.html
@@ -15,35 +15,67 @@
          <div class="content">
             <header class="top container">
                <nav class="h5">
-                  <a href="#">Resume</a>
-                  <a href="#projects">Projects</a>
-                  <a href="#about">About</a>
+                  <a class="link" href="#">Resume</a>
+                  <a class="link" href="#projects">Projects</a>
+                  <a class="link" href="#about">About</a>
                </nav>
             </header>
             <div class="bottom container">
                <h1 class="h1">Michael <span class="motif">G</span>ombos</h1>
                <h2 class="text-light h3 ">Your Freindly Neighborhood Web Designer</h2>
-               <button>Github</button>
-               <button class="bg-secondary">Resume</button>
+               <a class="button hvr-grow">Github</a>
+               <a class="button hvr-grow bg-secondary">Resume</a>
             </div>
          </div>
          <!--canvas is generated here-->
       </div>
       <div class="container">
          <div id="projects">
+            <h2 class="text-primary h2">Projects</h2>
             <div class="project">
-               <h2 class="text-primary h2">Projects</h2>
                <h3 class="h4 bold">Carrot.com Css Tab Extender</h3>
                <p>While working at SEO for real estate investors, I spent a lot of my time inside of the carrot editor tweaking and designing web pages. The carrot.com design tab offers a CSS editor much like WordPress, but I found the default size to be too small </p>
                <img class="preview" src="./assets/images/carrot-project.png">
                <nav>
-                  <button class="bg-secondary">Chrome Web Store</button>
-                  <button>Github</button>
+                  <a class="button bg-secondary">Web Store</a>
+                  <a class="button">Github</a>
                </nav>
                <div class="tech">
                   <img src="./assets/icons/icon_css.svg">
                   <img src="./assets/icons/icon_html.svg">
                   <img src="./assets/icons/icon_js.svg">
+               </div>
+            </div>
+            <div class="project">
+               <h3 class="h4 bold">Sorting Algorith Visualizer</h3>
+               <p>This is a react application build to provide a visual for how data is moved inside of arrays that are ran throught common sorting algorithms.  </p>
+               <img class="preview" src="./assets/images/sorter-project.png">
+               <nav>
+                  <a class="button bg-secondary">View Live</a>
+                  <a class="button">Github</a>
+               </nav>
+               <div class="tech">
+                  <img src="./assets/icons/icon_react.svg">
+                  <img src="./assets/icons/icon_css.svg">
+                  <img src="./assets/icons/icon_html.svg">
+                  <img src="./assets/icons/icon_js.svg">
+               </div>
+            </div>
+            <div class="project">
+               <h3 class="h4 bold">KbKaty.com</h3>
+               <p>KbKaty is a Texas contracting company that opened in 2018. I created their first website working closely with the owner to decide on a design
+
+<br/><br/>
+This was one of my first real projects and taught me a lot about extracting content from clients.</p>
+               <img class="preview" src="./assets/images/kbkaty-project.png">
+               <nav>
+                  <a class="button bg-secondary">View Live</a>
+               </nav>
+               <div class="tech">
+                  <img src="./assets/icons/icon_css.svg">
+                  <img src="./assets/icons/icon_html.svg">
+                  <img src="./assets/icons/icon_js.svg">
+                  <img src="./assets/icons/icon_bruhstrap.svg">
                </div>
             </div>
          </div>
@@ -52,7 +84,7 @@
             <div class="column row-desktop">
                <div class="column">
                   <h3>My name is michael...</h3>
-                  <button class="bg-secondary">...but you can call me anytime</button>
+                  <a class="button bg-secondary">...but you can call me anytime</a>
                   <p>I'm a part time student at Houston community college, with plans to continue my education at The University of Houston upon graduation.</p>
                   <br/>
                   <p>I like to spend my free time practicing the ukulele, repairing military grade jet turbines, and lying about my hobbies.</p>
@@ -67,14 +99,14 @@
          <div class="container">
             <div class="row">
                <div class="column">
-                  <a href="#hero">Back To Top</a>
-                  <a href="#">Resume</a>
-                  <a href="#projects">Projects</a>
-                  <a href="#about">About</a>
-               </div>
-               <div class="column">
-                  <p>Email:</p>
-                  <p>Phone:</p>
+                  <a class="link" href="#hero">Back To Top</a>
+                  <a class="link" href="#">Resume</a>
+                  <a class="link" href="#projects">Projects</a>
+                  <a class="link" href="#about">About</a>
+                  
+                  <p class="bold">Info:</p>
+                  <a class="link" href="mailto:gombos2002@gmail.com">gombos2002@gmail.com</a>
+                  <a class="link" href="tel:3453378946">346 337 8946</a>
                </div>
             </div>
          </div>
