Added links, Updated about section portrait

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="bottom container">
                <h1 class="h1">Michael <span class="motif">G</span>ombos</h1>
                <h2 class="text-light h3 ">Your Freindly Neighborhood Web Designer</h2>
-               <a class="button hvr-grow">Github</a>
-               <a class="button hvr-grow bg-secondary">Resume</a>
+               <a href="https://github.com/MichaelGombos" class="button hvr-grow">Github</a>
+               <a href="" class="button hvr-grow bg-secondary">Resume</a>
             </div>
          </div>
          <!--canvas is generated here-->
@@ -37,8 +37,8 @@
                <p>While working at SEO for real estate investors, I spent a lot of my time inside of the carrot editor tweaking and designing web pages. The carrot.com design tab offers a CSS editor much like WordPress, but I found the default size to be too small </p>
                <img class="preview" src="./assets/images/carrot-project.png">
                <nav>
-                  <a class="button bg-secondary">Web Store</a>
-                  <a class="button">Github</a>
+                  <a href="https://chrome.google.com/webstore/detail/carrot-css-tab-extender/lgkdfebkigaodhjhbceehdilafpdallo?hl=en"class="button bg-secondary">Web Store</a>
+                  <a href="https://github.com/MichaelGombos/Carrot-CSS-Tab-Extender" class="button">Github</a>
                </nav>
                <div class="tech">
                   <img src="./assets/icons/icon_css.svg">
@@ -51,8 +51,8 @@
                <p>This is a react application build to provide a visual for how data is moved inside of arrays that are ran throught common sorting algorithms.  </p>
                <img class="preview" src="./assets/images/sorter-project.png">
                <nav>
-                  <a class="button bg-secondary">View Live</a>
-                  <a class="button">Github</a>
+                  <a href="https://sparkling-tiramisu-b58a5d.netlify.app/" class="button bg-secondary">View Live</a>
+                  <a href="https://github.com/MichaelGombos/sorting-algorithm-visualizer" class="button">Github</a>
                </nav>
                <div class="tech">
                   <img src="./assets/icons/icon_react.svg">
@@ -69,7 +69,7 @@
 This was one of my first real projects and taught me a lot about extracting content from clients.</p>
                <img class="preview" src="./assets/images/kbkaty-project.png">
                <nav>
-                  <a class="button bg-secondary">View Live</a>
+                  <a href="https://www.kbkaty.com/" class="button bg-secondary">View Live</a>
                </nav>
                <div class="tech">
                   <img src="./assets/icons/icon_css.svg">
