Added motif, Added hero section gradient overlay

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
    </head>
-   <body>
+   <body class="bg-darker text-white">
       <div id="hero">
          <div class="content">
             <header class="top container">
@@ -31,7 +31,7 @@
       </div>
       <div class="container">
          <div id="projects">
-            <h2 class="text-primary h2">Projects</h2>
+            <h2 class="text-primary h2"><span class="motif">P</span>rojects</h2>
             <div class="project">
                <h3 class="h4 bold">Carrot.com Css Tab Extender</h3>
                <p>While working at SEO for real estate investors, I spent a lot of my time inside of the carrot editor tweaking and designing web pages. The carrot.com design tab offers a CSS editor much like WordPress, but I found the default size to be too small </p>
@@ -80,7 +80,7 @@ This was one of my first real projects and taught me a lot about extracting cont
             </div>
          </div>
          <div id="about">
-            <h2 class="h2 text-primary">About</h2>
+            <h2 class="h2 text-primary"><span class="motif">A</span>bout</h2>
             <div class="column row-desktop">
                <div class="column">
                   <h3>My name is michael...</h3>
