Added Responsive Styles for hero, Removed duplicate links in hero

--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
          <div class="content">
             <header class="top container">
                <nav class="h5">
-                  <a class="link" href="#">Resume</a>
                   <a class="link" href="#projects">Projects</a>
                   <a class="link" href="#about">About</a>
                </nav>
             </header>
             <div class="bottom container">
-               <h1 class="h1">Michael <span class="motif">G</span>ombos</h1>
+               <h1 class="h1">Michael <span class="inline-block"><span class="motif">G</span>ombos</span></h1>
                <h2 class="text-light h3 ">Your Freindly Neighborhood Web Designer</h2>
                <a href="https://github.com/MichaelGombos" class="button hvr-grow">Github</a>
                <a href="" class="button hvr-grow bg-secondary">Resume</a>
