Added explicit width/height for img, added alt for img, added lanng, and meta description to html, added missing phone link in about us.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
    <head>
       <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="author" content="Michael Gombos">
+      <meta name="description" content="Michael Gombos is a web developer in houston texas with a focus on accessibility, design, and SEO.">
+      
       <title>Title</title>
       
       <!--critical CSS-->
@@ -162,30 +165,30 @@ overflow:hidden;
             <div class="project">
                <h3 class="h4 bold">Carrot.com Css Tab Extender</h3>
                <p>While working at SEO for real estate investors, I spent a lot of my time inside of the carrot editor tweaking and designing web pages. The carrot.com design tab offers a CSS editor much like WordPress, but I found the default size to be too small </p>
-               <img class="preview" src="./assets/images/carrot-project.webp">
+               <img alt="Google Play Store preview of Css Tab Extender Project" width="615" height="305" class="preview" src="./assets/images/carrot-project.webp">
                <nav>
                   <a href="https://chrome.google.com/webstore/detail/carrot-css-tab-extender/lgkdfebkigaodhjhbceehdilafpdallo?hl=en"class="button bg-secondary">Web Store</a>
                   <a href="https://github.com/MichaelGombos/Carrot-CSS-Tab-Extender" class="button">Github</a>
                </nav>
                <div class="tech">
-                  <img src="./assets/icons/icon_css.svg">
-                  <img src="./assets/icons/icon_html.svg">
-                  <img src="./assets/icons/icon_js.svg">
+                  <img alt="CSS icon" src="./assets/icons/icon_css.svg">
+                  <img alt="HTML icon" src="./assets/icons/icon_html.svg">
+                  <img alt="JS icon"  src="./assets/icons/icon_js.svg">
                </div>
             </div>
             <div class="project">
                <h3 class="h4 bold">Sorting Algorithm Visualizer</h3>
                <p>This is a react application build to provide a visual for how data is moved inside of arrays that are ran throught common sorting algorithms.  </p>
-               <img class="preview" src="./assets/images/sorter-project.webp">
+               <img alt="Website screenshot of the Sorting Algorithm Visualizer project"width="612" height="433" class="preview" src="./assets/images/sorter-project.webp">
                <nav>
                   <a href="https://sparkling-tiramisu-b58a5d.netlify.app/" class="button bg-secondary">View Live</a>
                   <a href="https://github.com/MichaelGombos/sorting-algorithm-visualizer" class="button">Github</a>
                </nav>
                <div class="tech">
-                  <img src="./assets/icons/icon_react.svg">
-                  <img src="./assets/icons/icon_css.svg">
-                  <img src="./assets/icons/icon_html.svg">
-                  <img src="./assets/icons/icon_js.svg">
+                  <img alt="React icon" src="./assets/icons/icon_react.svg">
+                  <img alt="CSS icon" src="./assets/icons/icon_css.svg">
+                  <img alt="HTML icon" src="./assets/icons/icon_html.svg">
+                  <img alt="JS icon" src="./assets/icons/icon_js.svg">
                </div>
             </div>
             <div class="project">
@@ -194,15 +197,15 @@ overflow:hidden;
 
 <br/><br/>
 This was one of my first real projects and taught me a lot about extracting content from clients.</p>
-               <img class="preview" src="./assets/images/kbkaty-project.webp">
+               <img alt="website screenshot of kbkaty.com"width="611" height="300" class="preview" src="./assets/images/kbkaty-project.webp">
                <nav>
                   <a href="https://www.kbkaty.com/" class="button bg-secondary">View Live</a>
                </nav>
                <div class="tech">
-                  <img src="./assets/icons/icon_css.svg">
-                  <img src="./assets/icons/icon_html.svg">
-                  <img src="./assets/icons/icon_js.svg">
-                  <img src="./assets/icons/icon_bruhstrap.svg">
+                  <img alt="CSS icon" src="./assets/icons/icon_css.svg">
+                  <img alt="HTML icon" src="./assets/icons/icon_html.svg">
+                  <img alt="JS icon" src="./assets/icons/icon_js.svg">
+                  <img alt="Bootstrap icon" src="./assets/icons/icon_bruhstrap.svg">
                </div>
             </div>
          </div>
@@ -211,13 +214,13 @@ This was one of my first real projects and taught me a lot about extracting cont
             <div class="column row-desktop">
                <div class="column">
                   <h3>My name is michael...</h3>
-                  <a class="button bg-secondary">...but you can call me anytime</a>
+                  <a href="tel:3463378946"class="button bg-secondary">...but you can call me anytime</a>
                   <p>I'm a part time student at Houston community college, with plans to continue my education at The University of Houston upon graduation.</p>
                   <br/>
                   <p>I like to spend my free time practicing the ukulele, repairing military grade jet turbines, and lying about my hobbies.</p>
                </div>
                <div class="column">
-                  <img src="./assets/images/michael.webp">
+                  <img alt="Photo of michael gombos"src="./assets/images/michael.webp">
                </div>
             </div>
          </div>
