Added Explicit width/height for all img, Resolved incorrect aspect ratio for images on mobile

--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@ overflow:hidden;
                   <a href="https://github.com/MichaelGombos/Carrot-CSS-Tab-Extender" class="button">Github</a>
                </nav>
                <div class="tech">
-                  <img alt="CSS icon" src="./assets/icons/icon_css.svg">
-                  <img alt="HTML icon" src="./assets/icons/icon_html.svg">
-                  <img alt="JS icon"  src="./assets/icons/icon_js.svg">
+                  <img width="37" height="41" alt="CSS icon" src="./assets/icons/icon_css.svg">
+                  <img width="37" height="41" alt="HTML icon" src="./assets/icons/icon_html.svg">
+                  <img width="42" height="41" alt="JS icon"  src="./assets/icons/icon_js.svg">
                </div>
             </div>
             <div class="project">
@@ -185,10 +185,10 @@ overflow:hidden;
                   <a href="https://github.com/MichaelGombos/sorting-algorithm-visualizer" class="button">Github</a>
                </nav>
                <div class="tech">
-                  <img alt="React icon" src="./assets/icons/icon_react.svg">
-                  <img alt="CSS icon" src="./assets/icons/icon_css.svg">
-                  <img alt="HTML icon" src="./assets/icons/icon_html.svg">
-                  <img alt="JS icon" src="./assets/icons/icon_js.svg">
+                  <img width="47" height="41" alt="React icon" src="./assets/icons/icon_react.svg">
+                  <img width="37" height="41" alt="CSS icon" src="./assets/icons/icon_css.svg">
+                  <img width="37" height="41" alt="HTML icon" src="./assets/icons/icon_html.svg">
+                  <img width="42" height="41" alt="JS icon" src="./assets/icons/icon_js.svg">
                </div>
             </div>
             <div class="project">
@@ -202,10 +202,10 @@ This was one of my first real projects and taught me a lot about extracting cont
                   <a href="https://www.kbkaty.com/" class="button bg-secondary">View Live</a>
                </nav>
                <div class="tech">
-                  <img alt="CSS icon" src="./assets/icons/icon_css.svg">
-                  <img alt="HTML icon" src="./assets/icons/icon_html.svg">
-                  <img alt="JS icon" src="./assets/icons/icon_js.svg">
-                  <img alt="Bootstrap icon" src="./assets/icons/icon_bruhstrap.svg">
+                  <img width="37" height="41" alt="CSS icon" src="./assets/icons/icon_css.svg">
+                  <img width="37" height="41" alt="HTML icon" src="./assets/icons/icon_html.svg">
+                  <img width="42" height="41" alt="JS icon" src="./assets/icons/icon_js.svg">
+                  <img width="41" height="41" alt="Bootstrap icon" src="./assets/icons/icon_bruhstrap.svg">
                </div>
             </div>
          </div>
@@ -220,7 +220,7 @@ This was one of my first real projects and taught me a lot about extracting cont
                   <p>I like to spend my free time practicing the ukulele, repairing military grade jet turbines, and lying about my hobbies.</p>
                </div>
                <div class="column">
-                  <img alt="Photo of michael gombos"src="./assets/images/michael.webp">
+                  <img width="410" height="324" alt="Photo of michael gombos"src="./assets/images/michael.webp">
                </div>
             </div>
          </div>
