updated title tag, added favicon

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="author" content="Michael Gombos">
       <meta name="description" content="Michael Gombos is a web developer in houston texas with a focus on accessibility, design, and SEO.">
-      
-      <title>Title</title>
+      <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
+      <title>Michael Gombos | Houston Web Designer</title>
       
       <!--critical CSS-->
       <style type="text/css">
